# FFmpegKit

./: README.md  settings.gradle
ffmpegkit/: .gitignore  CMakeLists.txt  back_up  build.gradle
ffmpegkit/libs/include/: config.h
ffmpegkit/libs/include/libavcodec/: avcodec.h  mathops.h  vaapi.h  vdpau.h  xvmc.h
ffmpegkit/libs/include/libavfilter/: avfilter.h
ffmpegkit/libs/include/libavformat/: avformat.h
ffmpegkit/libs/include/libavutil/: crc.h  imgutils.h  mathematics.h  opt.h  pixdesc.h  pixfmt.h
ffmpegkit/libs/include/libswresample/: swresample.h
ffmpegkit/src/main/: AndroidManifest.xml
ffmpegkit/src/main/aidl/haibao/com/ffmpegkit/: ICallBackAidlInterface.aidl  IFFmpegInterface.aidl
ffmpegkit/src/main/cpp/: cmdutils.c  cmdutils.h  cmdutils_common_opts.h  ffmpeg.c  ffmpeg.h  ffmpeg_box.c  ffmpeg_filter.c  ffmpeg_opt.c  ffmpeg_wrapper.c
ffmpegkit/src/main/cpp/libavdevice/: avdevice.h  mathops.h
ffmpegkit/src/main/cpp/libavformat/: url.h
ffmpegkit/src/main/cpp/libavresample/: avresample.h
ffmpegkit/src/main/cpp/libavutil/: cpu.h  internal.h  timer.h
ffmpegkit/src/main/java/haibao/com/ffmpegkit/: FFmpegJNIWrapper.java  FFmpegJniReal.java  FFmpegKit.java  FFmpegManager.java  KitExecutor.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/bean/: CommandType.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/business/: CmdDistribution.java  FileGeneratorHelper.java  RemoteTask.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/business/impl/: AbsTask.java  AddAudioToSlideTask.java  AddAudioToVideoTask.java  CacheHelper.java  CmdDistributionImpl.java  CmdDistributionImpl2.java  CmdDistributionImpl3.java  ConcatAudioTask.java  ConcatTask.java  CutAudioTask.java  CutVideoTask.java  FinalConcatTask.java  ImageScaleTask.java  OnScaleVideoListener.java  TaskC.java  (+3 more)
ffmpegkit/src/main/java/haibao/com/ffmpegkit/cmd/: AudioConvertCommand.java  AudioToSlideShowCommand.java  ConcentrateAVCommand.java  CutAudioCommand.java  CutVideoCommand.java  MixingAVCommand.java  ScaleCommand.java  SlideShowCommand.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/commands/: BaseCommand.java  Command.java  CutGifCommand.java  CutVideoCommand.java  FormatConvertCommand.java  ScreenshotCommand.java  SeparatorCommand.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/listener/: JniListener.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/service/: FFmpegRemoteService.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/temp/: CourseAwareCmd.java
ffmpegkit/src/main/java/haibao/com/ffmpegkit/utils/: AppCheckUtils.java  Constant.java  FileUtils.java  SharedPreferencesUtils.java  TextUtils.java
(+7 files in other folders)
